# efm32zg-pacs

./: CHANGELOG.md  README.md
pacs/efm32zg/: Cargo.toml  README.md  build.rs
pacs/efm32zg/efm32zg108/: Cargo.toml
pacs/efm32zg/efm32zg108/src/: lib.rs
pacs/efm32zg/efm32zg110/: Cargo.toml
pacs/efm32zg/efm32zg110/src/: lib.rs
pacs/efm32zg/efm32zg210/: Cargo.toml
pacs/efm32zg/efm32zg210/src/: lib.rs
pacs/efm32zg/efm32zg222/: Cargo.toml
pacs/efm32zg/efm32zg222/src/: lib.rs
pacs/efm32zg/src/: lib.rs
pacs/efm32zg/src/efm32zg108/: mod.rs  prs.rs
pacs/efm32zg/src/efm32zg108/acmp0/: inputsel.rs
pacs/efm32zg/src/efm32zg108/cmu/: auxhfrcoctrl.rs  ctrl.rs  hfperclken0.rs  lfaclken0.rs  lfapresc0.rs
pacs/efm32zg/src/efm32zg108/dma/: ch0_ctrl.rs  ch1_ctrl.rs  ch2_ctrl.rs  ch3_ctrl.rs  chaltc.rs  chenc.rs  chpris.rs  ien.rs  ifs.rs
pacs/efm32zg/src/efm32zg108/gpio/: em4wupol.rs
pacs/efm32zg/src/efm32zg108/msc/: readctrl.rs
pacs/efm32zg/src/efm32zg108/pcnt0/: ien.rs  ifc.rs
pacs/efm32zg/src/efm32zg108/prs/: ch0_ctrl.rs  ch1_ctrl.rs  ch2_ctrl.rs  ch3_ctrl.rs
pacs/efm32zg/src/efm32zg108/timer1/: cc1_ctrl.rs
pacs/efm32zg/src/efm32zg110/: mod.rs
pacs/efm32zg/src/efm32zg210/: mod.rs
pacs/efm32zg/src/efm32zg222/: dma.rs  mod.rs
svd/EFM32ZG/: EFM32ZG108F16.svd  EFM32ZG108F32.svd  EFM32ZG108F4.svd  EFM32ZG108F8.svd  EFM32ZG110F16.svd  EFM32ZG110F32.svd  EFM32ZG110F4.svd  EFM32ZG110F8.svd  EFM32ZG210F16.svd  EFM32ZG210F32.svd  EFM32ZG210F4.svd  EFM32ZG210F8.svd  EFM32ZG222F16.svd  EFM32ZG222F32.svd  EFM32ZG222F4.svd  EFM32ZG222F8.svd
(+50 files in other folders)
